<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/backToEncounterBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/characterNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/details_name"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <TextView
        android:id="@+id/initiativeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/details_init"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/characterNameText"
        app:layout_constraintTop_toBottomOf="@id/characterNameText" />

    <TextView
        android:id="@+id/currentHealthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/details_current_hp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/initiativeText"
        app:layout_constraintTop_toBottomOf="@id/initiativeText" />

    <TextView
        android:id="@+id/maxHealthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/details_maxHp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/currentHealthText"
        app:layout_constraintTop_toBottomOf="@id/currentHealthText" />

    <TextView
        android:id="@+id/notesTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/details_notes"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/maxHealthText"
        app:layout_constraintTop_toBottomOf="@id/maxHealthText" />

    <TextView
        android:id="@+id/notesText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="Notes will go here later."
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notesTitleText" />

    <TextView
        android:id="@+id/statusTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/details_statuses"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/notesTitleText"
        app:layout_constraintTop_toBottomOf="@id/notesText" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="Status effects will go here later."
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statusTitleText" />

</androidx.constraintlayout.widget.ConstraintLayout>